Closed
Bug 844467
Opened 12 years ago
Closed 12 years ago
BaselineCompiler: Assertion failure: hasCallObj(), at ../ion/BaselineFrame.h:235
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: decoder, Assigned: jandem)
References
Details
(Keywords: assertion, testcase, Whiteboard: [js:t][jsbugmon:update])
Attachments
(1 file)
|
5.83 KB,
patch
|
djvj
:
review+
|
Details | Diff | Splinter Review |
The following testcase asserts on baseline compiler branch revision b7e4d01b541e (run with --ion-eager):
test();
function test() {
var f;
function gen(yield_at_least_once) {
f = function(){};
}
for (var i in gen()) {}
arguments[arguments.length - 1];
}
| Assignee | ||
Comment 1•12 years ago
|
||
When we bailout to the interpreter, we call EnsureHasScopeObjects to ensure the frame has a call object. This patch also calls EnsureHasScopeObjects when we bailout to baseline.
Updated•12 years ago
|
Attachment #717887 -
Flags: review?(kvijayan) → review+
Updated•12 years ago
|
Whiteboard: [jsbugmon:update] → [js:t][jsbugmon:update]
| Assignee | ||
Comment 2•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•