Bug 844467 - Ensure frame has a call object after bailout. r=djvj