js/src/jit-test/tests/baseline/bug844467.js
@@ -1,0 +1,9 @@
+function test() {
+    var f;
+    function gen() {
+	f = function(){}
+    }
+    for (var i in gen()) {}
+    arguments[arguments.length - 1];
+}
+test();
